# BezierLib

./: .gitignore  CMakeLists.txt  README.md
cmake/: mingw-toolchain.cmake
include/: bezier.hpp  bezier_api.hpp
lib/: nlopt.lib
lib/include/: nlopt.hpp
scripts/: bezier_plot.py  geo_norm.py  multi_plot.py  swarm_plot.py
src/: bezier_circle.cpp  bezier_demo.cpp  bezier_fixed.cpp  bezier_functions.cpp  bezier_io.cpp  bezier_multi.cpp  bezier_quintic_fixed.cpp  bezier_swarm.cpp  geo_convert.cpp  non_intersection.cpp
test/: intersection1.cpp  test_circle.cpp  test_geo.cpp  test_multi.cpp  test_quintic.cpp
